{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 49,
  "lineage": "b3d9641d-43ef-69ce-0e46-54f26a1ac26f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040546550742:internet-gateway/igw-0e424643a04601489",
            "id": "igw-0e424643a04601489",
            "owner_id": "040546550742",
            "tags": {
              "Name": "full-scale-3tier-arch-igw"
            },
            "tags_all": {
              "Name": "full-scale-3tier-arch-igw"
            },
            "vpc_id": "vpc-0045c85c7791bd917"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:040546550742:loadbalancer/app/LB-Demo/ab68e7fb0639b5f7",
            "arn_suffix": "app/LB-Demo/ab68e7fb0639b5f7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "LB-Demo-833779236.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:040546550742:loadbalancer/app/LB-Demo/ab68e7fb0639b5f7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "LB-Demo",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03f5388f98e2e271c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-017f0c2086e2c3cd3"
              },
              {
                "subnet_id": "subnet-0d594f67d22390284"
              },
              {
                "subnet_id": "subnet-0dbeb33959610c924"
              }
            ],
            "subnets": [
              "subnet-017f0c2086e2c3cd3",
              "subnet-0d594f67d22390284",
              "subnet-0dbeb33959610c924"
            ],
            "vpc_id": "vpc-0045c85c7791bd917",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_security_group.SGLB",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:040546550742:listener/app/LB-Demo/ab68e7fb0639b5f7/98f5cbf1561ac12e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:040546550742:listener/app/LB-Demo/ab68e7fb0639b5f7/98f5cbf1561ac12e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:040546550742:loadbalancer/app/LB-Demo/ab68e7fb0639b5f7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_lb.lb",
            "aws_security_group.SGLB",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lb_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:040546550742:targetgroup/EC2-Target-Group/37ad6dfdf9202895",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:040546550742:listener-rule/app/LB-Demo/ab68e7fb0639b5f7/98f5cbf1561ac12e/2c113c3e130443e0",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:040546550742:listener-rule/app/LB-Demo/ab68e7fb0639b5f7/98f5cbf1561ac12e/2c113c3e130443e0",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:040546550742:listener/app/LB-Demo/ab68e7fb0639b5f7/98f5cbf1561ac12e",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_lb.lb",
            "aws_lb_listener.alb_listener",
            "aws_lb_target_group.ec2",
            "aws_security_group.SGLB",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:040546550742:targetgroup/EC2-Target-Group/37ad6dfdf9202895",
            "arn_suffix": "targetgroup/EC2-Target-Group/37ad6dfdf9202895",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:040546550742:targetgroup/EC2-Target-Group/37ad6dfdf9202895",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "EC2-Target-Group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0045c85c7791bd917"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pb_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040546550742:route-table/rtb-07b56c1b744d6bfff",
            "id": "rtb-07b56c1b744d6bfff",
            "owner_id": "040546550742",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e424643a04601489",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route table"
            },
            "tags_all": {
              "Name": "public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0045c85c7791bd917"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pb_rt_assoc_pb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047f5c58800ac6c92",
            "route_table_id": "rtb-07b56c1b744d6bfff",
            "subnet_id": "subnet-017f0c2086e2c3cd3"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.pb_rt",
            "aws_subnet.pb_sn_az1",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pb_rt_assoc_pb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e5291b273cf137c",
            "route_table_id": "rtb-07b56c1b744d6bfff",
            "subnet_id": "subnet-0d594f67d22390284"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.pb_rt",
            "aws_subnet.pb_sn_az2",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pb_rt_assoc_pb3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9cca3bb257c72fc",
            "route_table_id": "rtb-07b56c1b744d6bfff",
            "subnet_id": "subnet-0dbeb33959610c924"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.pb_rt",
            "aws_subnet.pb_sn_az3",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SGLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040546550742:security-group/sg-03f5388f98e2e271c",
            "description": "Allow public internet in",
            "egress": [],
            "id": "sg-03f5388f98e2e271c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "10.16.0.0/16-lb-sg",
            "name_prefix": "",
            "owner_id": "040546550742",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0045c85c7791bd917"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SGpublicSN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040546550742:security-group/sg-07fdcc3384e3caeee",
            "description": "It allows public subnet to connect with the internet",
            "egress": [],
            "id": "sg-07fdcc3384e3caeee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "10.16.0.0/16-public-SG",
            "name_prefix": "",
            "owner_id": "040546550742",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0045c85c7791bd917"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SGpvtapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040546550742:security-group/sg-07fb2e4d70384239f",
            "description": "Allow EFS in",
            "egress": [],
            "id": "sg-07fb2e4d70384239f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07fdcc3384e3caeee"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "10.16.0.0/16-pvt-appsn-sg",
            "name_prefix": "",
            "owner_id": "040546550742",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0045c85c7791bd917"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SGpublicSN",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SGpvtdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040546550742:security-group/sg-0fc36504ef41b9673",
            "description": "Allow MySQL in",
            "egress": [],
            "id": "sg-0fc36504ef41b9673",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07fdcc3384e3caeee"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "10.16.0.0/16-pvt-dbsn-sg",
            "name_prefix": "",
            "owner_id": "040546550742",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0045c85c7791bd917"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SGpublicSN",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pb_sn_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040546550742:subnet/subnet-017f0c2086e2c3cd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017f0c2086e2c3cd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040546550742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pb-sn-az1"
            },
            "tags_all": {
              "Name": "pb-sn-az1"
            },
            "vpc_id": "vpc-0045c85c7791bd917"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pb_sn_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040546550742:subnet/subnet-0d594f67d22390284",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d594f67d22390284",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040546550742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pb-sn-az2"
            },
            "tags_all": {
              "Name": "pb-sn-az2"
            },
            "vpc_id": "vpc-0045c85c7791bd917"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pb_sn_az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040546550742:subnet/subnet-0dbeb33959610c924",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.176.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbeb33959610c924",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040546550742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pb-sn-az3"
            },
            "tags_all": {
              "Name": "pb-sn-az3"
            },
            "vpc_id": "vpc-0045c85c7791bd917"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sn_app_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040546550742:subnet/subnet-03133c6ef657db7b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03133c6ef657db7b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040546550742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt-app-sn-az1"
            },
            "tags_all": {
              "Name": "pvt-app-sn-az1"
            },
            "vpc_id": "vpc-0045c85c7791bd917"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sn_app_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040546550742:subnet/subnet-03eb7ef52c84947f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03eb7ef52c84947f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040546550742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt-app-sn-az2"
            },
            "tags_all": {
              "Name": "pvt-app-sn-az2"
            },
            "vpc_id": "vpc-0045c85c7791bd917"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sn_app_az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040546550742:subnet/subnet-01b4ee7fb495d9b9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b4ee7fb495d9b9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040546550742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt-app-sn-az3"
            },
            "tags_all": {
              "Name": "pvt-app-sn-az3"
            },
            "vpc_id": "vpc-0045c85c7791bd917"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sn_db_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040546550742:subnet/subnet-0cd57fec23b81d0b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd57fec23b81d0b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040546550742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt-app-db-az1"
            },
            "tags_all": {
              "Name": "pvt-app-db-az1"
            },
            "vpc_id": "vpc-0045c85c7791bd917"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sn_db_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040546550742:subnet/subnet-016d88df0b8023778",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016d88df0b8023778",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040546550742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt-app-db-az2"
            },
            "tags_all": {
              "Name": "pvt-app-db-az2"
            },
            "vpc_id": "vpc-0045c85c7791bd917"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sn_db_az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040546550742:subnet/subnet-0b05ba5b98ceb1a1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b05ba5b98ceb1a1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040546550742",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt-app-db-az3"
            },
            "tags_all": {
              "Name": "pvt-app-db-az3"
            },
            "vpc_id": "vpc-0045c85c7791bd917"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040546550742:vpc/vpc-0045c85c7791bd917",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.16.0.0/16",
            "default_network_acl_id": "acl-0e02f78e0ddfedf9d",
            "default_route_table_id": "rtb-0c98f32b43f343876",
            "default_security_group_id": "sg-04809af29bb0190e0",
            "dhcp_options_id": "dopt-04575a96915d7ba4b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0045c85c7791bd917",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c98f32b43f343876",
            "owner_id": "040546550742",
            "tags": {
              "Name": "3_tier_vpc"
            },
            "tags_all": {
              "Name": "3_tier_vpc"
            }
          }
        }
      ]
    }
  ]
}